--- a/Share Beauty App/Views/LX/LXGraphView.xib
+++ b/Share Beauty App/Views/LX/LXGraphView.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="450" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ingredient_graph_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="8OG-AV-9Fq">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8OG-AV-9Fq">
                     <rect key="frame" x="0.0" y="13" width="170" height="187"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
@@ -34,11 +34,11 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.60784313725490191" green="0.53725490196078429" blue="0.27843137254901962" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="graph_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="Nfs-TZ-8Rc">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nfs-TZ-8Rc">
                     <rect key="frame" x="0.0" y="0.0" width="450" height="200"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lx_bash_line.png" translatesAutoresizingMaskIntoConstraints="NO" id="qEc-1G-JWe">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qEc-1G-JWe">
                     <rect key="frame" x="0.0" y="50" width="334" height="1"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
@@ -76,6 +76,7 @@
             <connections>
                 <outlet property="mBtnLeftGraph" destination="kWU-31-fo6" id="M6P-Ef-Ij5"/>
                 <outlet property="mBtnRightGraph" destination="4lK-xn-rvw" id="e5T-NS-84R"/>
+                <outlet property="mGraphBGImgV" destination="Nfs-TZ-8Rc" id="3yc-yx-xTd"/>
                 <outlet property="mImgVBackGround" destination="8OG-AV-9Fq" id="iht-8Z-SOb"/>
                 <outlet property="mImgVBashLine" destination="qEc-1G-JWe" id="uHO-9v-I1z"/>
                 <outlet property="mVLeftGraph" destination="gl8-vu-Cj7" id="Mvm-ZE-KlY"/>
@@ -84,9 +85,4 @@
             <point key="canvasLocation" x="87" y="239"/>
         </view>
     </objects>
-    <resources>
-        <image name="graph_bg.png" width="1882" height="856"/>
-        <image name="ingredient_graph_bg.png" width="706" height="835"/>
-        <image name="lx_bash_line.png" width="1334" height="5"/>
-    </resources>
 </document>
