--- a/Share Beauty App/Views/LX/LXYutakaConceptContentFirstView.xib
+++ b/Share Beauty App/Views/LX/LXYutakaConceptContentFirstView.xib
@@ -30,22 +30,22 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMt-JF-6sM">
                     <rect key="frame" x="450" y="170" width="430" height="340"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <mutableString key="text">The two  ne quality YUTAKA tools are made especially for Shiseido, in Japan’s traditional Imari Nabeshima porcelain manufacturing region. Made using a painstaking , hand-made process, each one is a real masterpiece. \nThe YUTAKA MASSAGER is designed for the face, neck, décolleté, and upper arm. \nThe YUTAKA STONE goes on the stomach to warm the body. Both tools are heated before use to provide thermal stimulation which ensures a truly extraordinary experience.</mutableString>
+                    <string key="text">The two  ne quality YUTAKA tools are made especially for Shiseido, in Japan’s traditional Imari Nabeshima porcelain manufacturing region. Made using a painstaking , hand-made process, each one is a real masterpiece. \nThe YUTAKA MASSAGER is designed for the face, neck, décolleté, and upper arm. \nThe YUTAKA STONE goes on the stomach to warm the body. Both tools are heated before use to provide thermal stimulation which ensures a truly extraordinary experience.</string>
                     <fontDescription key="fontDescription" name="ACaslonPro-Regular" family="Adobe Caslon Pro" pointSize="21"/>
                     <color key="textColor" red="0.63529411759999999" green="0.56470588239999997" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lx_yutaka_sub_1.png" translatesAutoresizingMaskIntoConstraints="NO" id="vMx-rr-plv">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vMx-rr-plv">
                     <rect key="frame" x="95" y="170" width="310" height="390"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="mImgV" destination="vMx-rr-plv" id="6AG-g8-esy"/>
+            </connections>
             <point key="canvasLocation" x="155" y="156"/>
         </view>
     </objects>
-    <resources>
-        <image name="lx_yutaka_sub_1.png" width="611" height="775"/>
-    </resources>
 </document>
