--- a/Share Beauty App/Views/LX/LXYutakaConceptContentSecondView.xib
+++ b/Share Beauty App/Views/LX/LXYutakaConceptContentSecondView.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="960" height="700"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lx_yutaka_sub_2.png" translatesAutoresizingMaskIntoConstraints="NO" id="vMx-rr-plv">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vMx-rr-plv">
                     <rect key="frame" x="0.0" y="0.0" width="960" height="700"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
@@ -46,11 +46,9 @@ Pure indulgence for your skin.</string>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="mDetailLbl" destination="iMt-JF-6sM" id="oDE-cc-QER"/>
+                <outlet property="mImgV" destination="vMx-rr-plv" id="VFp-jR-2ZX"/>
             </connections>
             <point key="canvasLocation" x="155" y="156"/>
         </view>
     </objects>
-    <resources>
-        <image name="lx_yutaka_sub_2.png" width="1916" height="1404"/>
-    </resources>
 </document>
